styles/components/product.module.scss
@use "../base/colours";
@use "../base/typography";
@use "../base/breakpoints";
@import "../../node_modules/rfs/scss.scss";

.product {
    display: flex;
    flex-flow: column nowrap;
    justify-content: flex-end;
    margin: 0 0 1.25rem 0;
    min-height: 500px;
    overflow: hidden;
    padding: 3rem 1.6rem;
    position: relative;
    z-index: 1;

    @include breakpoints.laptop {
        margin: 0;
        min-height: 600px;
        padding: 6rem 2.4rem 2.4rem 2.4rem;
    }

    & .product_description,
    & .product_cta {
        flex-grow: 1;
    }

    & .circle {
        background: colours.$navy;
        border-radius: 50%;
        height: 475px;
        left: 40%;
        position: absolute;
        top: 33%;
        width: 475px;
        z-index: 2;
    }

    & .product_visual {
        flex-grow: 2;
        position: relative;
        text-align: right;
        width: auto;
        z-index: 3;
    }

    & .product_chinese_name {
        @include font-size(100px);
        color: rgba(colours.$yellow, 15%);
        font-family: "Jin Mei Mao Xing Shu", "STKaiti", "Free HK Kai", cursive;
        left: 4%;
        position: absolute;
        text-shadow: 0 20px 30px rgba(colours.$yellow, 15%);
        top: 7%;
        user-select: none;
        z-index: 1;
    }

    h2 {
        @include font-size(64px);
        margin: -1.2rem 0 1rem -0.2rem;
        z-index: 4;
    }

    p {
        @include typography.uppercase;
        font-family: "Poppins", Arial, sans-serif;
        position: relative;
        z-index: 5;
    }

    &_goldstar {
        background: colours.$yellow;
        color: colours.$navy;

        p {
            color: colours.$darkgrey;
        }

        & .product_chinese_name {
            color: rgba(colours.$dirtygold, 15%);
            text-shadow: 0 20px 30px rgba(colours.$dirtygold, 15%);
        }
    }

    &_dragonsword {
        background: colours.$red;

        p {
            color: colours.$grey;
        }
    }

    &_peachesofimmortality {
        background: colours.$purple;

        p {
            color: colours.$grey;
        }
    }
}

